Closed
Bug 692635
Opened 14 years ago
Closed 13 years ago
IndexedDB: abort event should bubble
Categories
(Core :: Storage: IndexedDB, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: sicking, Assigned: khuey)
References
Details
(Keywords: dev-doc-complete)
Attachments
(1 file)
|
12.68 KB,
patch
|
sicking
:
review+
|
Details | Diff | Splinter Review |
No description provided.
| Reporter | ||
Comment 1•14 years ago
|
||
We should also add a IDBDatabase.onabort property.
| Assignee | ||
Updated•13 years ago
|
Assignee: nobody → khuey
| Assignee | ||
Comment 2•13 years ago
|
||
Attachment #576136 -
Flags: review?(bent.mozilla)
| Reporter | ||
Comment 3•13 years ago
|
||
Comment on attachment 576136 [details] [diff] [review]
Patch
Review of attachment 576136 [details] [diff] [review]:
-----------------------------------------------------------------
r=me
::: dom/indexedDB/IDBEvents.cpp
@@ +83,3 @@
> {
> + NS_ASSERTION(aCancelable == eNotCancelable || aBubbles == eDoesBubble,
> + "Event cannot be cancelable if it does not bubble!");
I don't really agree with this assertion. This might be true for all of the current indexeddb events, but it's not an inherent property in any way.
Attachment #576136 -
Flags: review?(bent.mozilla) → review+
| Assignee | ||
Comment 4•13 years ago
|
||
Ah, I thought it was. I'll remove that.
| Assignee | ||
Comment 5•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla11
| Assignee | ||
Updated•13 years ago
|
Keywords: dev-doc-needed
| Assignee | ||
Updated•13 years ago
|
Component: DOM → DOM: IndexedDB
Target Milestone: mozilla11 → ---
Version: Trunk → unspecified
Comment 6•9 years ago
|
||
This has been documented, see
https://developer.mozilla.org/en-US/docs/Web/Events/abort_indexedDB
https://developer.mozilla.org/en-US/docs/Web/API/IDBDatabase/onabort
I also added a note to
https://developer.mozilla.org/en-US/Firefox/Releases/11#IndexedDB
Keywords: dev-doc-needed → dev-doc-complete
You need to log in
before you can comment on or make changes to this bug.
Description
•