Bug 692635: Transaction abort events should bubble. r=sicking